complete the hookDex1 to ring me a bell

--- a/playchess/src/main/res/layout/activity_logo.xml
+++ b/playchess/src/main/res/layout/activity_logo.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".LogoActivity">
     <ImageView
+        android:id="@+id/iv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/chess_name_logo"
