--- a/app/src/main/res/layout/activity_second_host.xml
+++ b/app/src/main/res/layout/activity_second_host.xml
@@ -3,20 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".SecondHostActivity">
 
-
-    <Button
-        android:id="@+id/btn1"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="进入插件界面1" />
-
-
-    <Button
-        android:id="@+id/btn2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="进入插件界面1" />
-
+        android:text="SecondHostActivity"
+        android:textStyle="bold"
+        />
 </LinearLayout>
